Correction of padding on headers on small screens

--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,14 @@ h3 {
     flex-direction: column;
     align-items: center;
   }
+
+  h1 {
+    padding: 15px;
+  }
+
+  h2 {
+    padding: 20px;
+  }
 }
 
 button {
